--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>javax.servlet-api</artifactId>
-  		<version>4.0.0-bo1</version>
+  		<version>4.0.0-b01</version>
   	</dependency>
   	<dependency>
   		<groupId>mysql</groupId>
